--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "code-notion-site",
+  "name": "copy-notion-site",
+  "homepage": "https://soknanprogamming.github.io/copy-notion-site/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,11 +8,14 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
     "framer-motion": "^12.34.2",
+    "gh-pages": "^6.3.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
