delete old github workflows

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "copy-notion-site",
-  "homepage": "https://soknanprogamming.github.io/copy-notion-site/",
+  "homepage": "https://soknanprogramming.github.io/copy-notion-site/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
